--- a/index.html
+++ b/index.html
@@ -293,13 +293,13 @@
             <div class="row">
                 <div class="col-sm-6">
                     <label for="Name">Name
-                        <input type="text" name="name" id="name" required size="19">
+                        <input type="text" name="name" id="name" required >
                     </label>
                 </div>
                 <div class="col-sm-6">
                           
 <label for="email"> Email
-    <input type="email" name="email" id="email" required size="19">
+    <input type="email" name="email" id="email" required >
 </label>
 
     <button type="submit" class="ing btn btn-lg btn-danger">Subscribe </button>
