--- a/index.html
+++ b/index.html
@@ -292,15 +292,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <label for="Name">Name
+                    Name
                         <input type="text" name="name" id="name" required >
-                    </label>
+                
                 </div>
                 <div class="col-sm-6">
                           
-<label for="email"> Email
+Email
     <input type="email" name="email" id="email" required >
-</label>
+
 
     <button type="submit" class="ing btn btn-lg btn-danger">Subscribe </button>
 
