--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Email
              <span class="icconsty2 fa fa-phone fa-2x"></span>
                 <br>
                 
-            <h1 class="txt1"><span>Phone:</span> <a href="tel://07014880163"></a>2347014880163</h1>
+            <h1 class="txt1"><span>Phone:</span> <a href="tel://07014880163"></a>+2347014880163</h1>
             <br>
             <br>
             <span class="icconsty3 fa fa-paper-plane fa-2x"></span>
@@ -333,7 +333,7 @@ Email
                                 <h1 class="txt1"><span>Email:</span> <a href="adefolashewa@gmail.com"></a>adefolashewa@gmail.com</h1>
                                <br>
                                <br>
-                                <h1 class="txt1i"><u>Get In Touch With Us</u></h1> 
+                                <h1 class="txt1i"><u>Get In Touch</u></h1> 
                                 <form method="POST" id="contactForm" name="contactForm" class="contactForm">
                                     <div class="row">
                                         <div class="col-md-12">
