--- a/index.html
+++ b/index.html
@@ -323,14 +323,14 @@ Email
              <span class="icconsty2 fa fa-phone fa-2x"></span>
                 <br>
                 
-            <h1 class="txt1"><span>Phone:</span> <a href="tel://07014880163"></a>+234 701 4880 163</h1>
+            <h1 class="txt1"><span>Phone:</span> <a href="tel://07014880163">+234 70 1488 0163</a></h1>
             <br>
             <br>
             <span class="icconsty3 fa fa-paper-plane fa-2x"></span>
                     
                                     <form  action="mailto:adefolashewa@gmail.com" method="post" enctype="text/plain">
 
-                                <h1 class="txt1"><span>Email:</span> <a href="adefolashewa@gmail.com"></a>adefolashewa@gmail.com</h1>
+                                <h1 class="txt1"><span>Email:</span> <a href="adefolashewa@gmail.com">adefolashewa@gmail.com</a></h1>
                                <br>
                                <br>
                                 <h1 class="txt1i"><u>Get In Touch</u></h1> 
